test/expected/large/analyticsevents/VirtualService.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    foo.com/duname: aaservices2
    foo.com/duversion: 1.1.55-20190924.1569367447223
    foo.com/version: 1.1.55
  labels:
    app.kubernetes.io/name: aaservices2
    helm.sh/chart: aaservices2-1.1.55
  name: analyticsevents
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /analyticsEvents
    - uri:
        prefix: /analyticsEvents/
    route:
    - destination:
        host: analyticsevents.peekay.svc.cluster.local
